--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Right logo -->
         <img src="ibLogo.png" alt="IB Official Logo" class="logo-right"/>
       </div>
-      <h1>Welcome to the PGIA ATL Skills Self-assessment</h1>
+      <h1>Welcome to the PGIA ATL Skills Self-Assessment</h1>
       <p>Please complete the following information to get started.</p>
     </header>
 
@@ -191,7 +191,7 @@
         <h2>Self-Assessment</h2>
         <div id="selfAssessment"></div>
         <div style="text-align:center; margin-top:20px;">
-          <button id="nextButton">Next</button>
+          <button type="button" id="nextButton">Next</button>
         </div>
       </section>
 
