--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
 
         <!-- Communication -->
         <div class="categoryRow">
-          <input type="checkbox" id="commCheckbox" name="category" value="Communication" />
-          <label for="commCheckbox">Communication</label>
+          <input type="checkbox" id="CommunicationCheckbox" name="category" value="Communication" />
+          <label for="CommunicationCheckbox">Communication</label>
         </div>
-        <div class="dropdown hidden" id="commClusters">
+        <div class="dropdown hidden" id="CommunicationClusters">
           <label>
             <input type="checkbox" name="cluster" value="Exchanging thoughts, messages, and information effectively"/>
             Exchanging thoughts, messages, and information effectively
@@ -137,43 +137,70 @@
 
         <!-- Social -->
         <div class="categoryRow">
-          <input type="checkbox" id="socialCheckbox" name="category" value="Social" />
-          <label for="socialCheckbox">Social</label>
+          <input type="checkbox" id="SocialCheckbox" name="category" value="Social" />
+          <label for="SocialCheckbox">Social</label>
         </div>
-        <div class="dropdown hidden" id="socialClusters">
-          <label><input type="checkbox" name="cluster" value="Collaboration skills"/>Collaboration skills</label>
+        <div class="dropdown hidden" id="SocialClusters">
+          <label>
+            <input type="checkbox" name="cluster" value="Collaboration skills"/>
+            Collaboration skills
+          </label>
         </div>
 
         <!-- Self-Management -->
         <div class="categoryRow">
-          <input type="checkbox" id="selfMgmtCheckbox" name="category" value="Self-Management" />
-          <label for="selfMgmtCheckbox">Self-Management</label>
+          <input type="checkbox" id="SelfManagementCheckbox" name="category" value="Self-Management" />
+          <label for="SelfManagementCheckbox">Self-Management</label>
         </div>
-        <div class="dropdown hidden" id="selfMgmtClusters">
-          <label><input type="checkbox" name="cluster" value="Organization skills"/>Organization skills</label>
-          <label><input type="checkbox" name="cluster" value="Affective skills"/>Affective skills</label>
-          <label><input type="checkbox" name="cluster" value="Reflection skills"/>Reflection skills</label>
+        <div class="dropdown hidden" id="SelfManagementClusters">
+          <label>
+            <input type="checkbox" name="cluster" value="Organization skills"/>
+            Organization skills
+          </label>
+          <label>
+            <input type="checkbox" name="cluster" value="Affective skills"/>
+            Affective skills
+          </label>
+          <label>
+            <input type="checkbox" name="cluster" value="Reflection skills"/>
+            Reflection skills
+          </label>
         </div>
 
         <!-- Research -->
         <div class="categoryRow">
-          <input type="checkbox" id="researchCheckbox" name="category" value="Research" />
-          <label for="researchCheckbox">Research</label>
+          <input type="checkbox" id="ResearchCheckbox" name="category" value="Research" />
+          <label for="ResearchCheckbox">Research</label>
         </div>
-        <div class="dropdown hidden" id="researchClusters">
-          <label><input type="checkbox" name="cluster" value="Information literacy skills"/>Information literacy skills</label>
-          <label><input type="checkbox" name="cluster" value="Media literacy skills"/>Media literacy skills</label>
+        <div class="dropdown hidden" id="ResearchClusters">
+          <label>
+            <input type="checkbox" name="cluster" value="Information literacy skills"/>
+            Information literacy skills
+          </label>
+          <label>
+            <input type="checkbox" name="cluster" value="Media literacy skills"/>
+            Media literacy skills
+          </label>
         </div>
 
         <!-- Thinking -->
         <div class="categoryRow">
-          <input type="checkbox" id="thinkingCheckbox" name="category" value="Thinking" />
-          <label for="thinkingCheckbox">Thinking</label>
+          <input type="checkbox" id="ThinkingCheckbox" name="category" value="Thinking" />
+          <label for="ThinkingCheckbox">Thinking</label>
         </div>
-        <div class="dropdown hidden" id="thinkingClusters">
-          <label><input type="checkbox" name="cluster" value="Critical-thinking skills"/>Critical-thinking skills</label>
-          <label><input type="checkbox" name="cluster" value="Creative-thinking skills"/>Creative-thinking skills</label>
-          <label><input type="checkbox" name="cluster" value="Transfer skills"/>Transfer skills</label>
+        <div class="dropdown hidden" id="ThinkingClusters">
+          <label>
+            <input type="checkbox" name="cluster" value="Critical-thinking skills"/>
+            Critical-thinking skills
+          </label>
+          <label>
+            <input type="checkbox" name="cluster" value="Creative-thinking skills"/>
+            Creative-thinking skills
+          </label>
+          <label>
+            <input type="checkbox" name="cluster" value="Transfer skills"/>
+            Transfer skills
+          </label>
         </div>
 
         <button type="button" id="nextButtonPage1">Next</button>
