--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </div>
     </div>
     
-    <button id="nextButtonPage2">Next</button>
+    <button type="button" id="nextButtonPage2">Next</button>
   </section>
   
   <!-- Page 3: Skills Selection -->
@@ -159,7 +159,7 @@
     <div id="skillsSelection">
       <!-- Dynamically populated based on selected clusters -->
     </div>
-    <button id="startAssessmentButton">Start Self-Assessment</button>
+    <button type="button" id="startAssessmentButton">Start Self-Assessment</button>
   </section>
   
   <!-- Page 4: Self-Assessment Questions -->
@@ -168,7 +168,7 @@
     <div id="selfAssessment">
       <!-- Dynamically populated questions -->
     </div>
-    <button id="nextButton">Next</button>
+    <button type="button" id="nextButton">Next</button>
   </section>
   
   <script src="scripts.js"></script>
