--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/International_Baccalaureate_logo.svg/512px-International_Baccalaureate_logo.svg.png" alt="IB Logo" id="ib-logo">
     </div>
     <h1>Welcome to the PGIA ATL Skills Self-Assessment</h1>
-    <button id="continueButton">Continue</button>
+    <button type="button" id="continueButton">Continue</button>
   </section>
   
   <!-- Page 1: Student Information -->
